--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".MapsActivity" >
 
     <LinearLayout
@@ -19,15 +19,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/et_location" />
+            android:id="@+id/et_location"
+            android:textColor="@color/black"
+            android:hint="  Enter Location"
+            android:textColorHint="@color/black"
+            android:layout_marginLeft="10dp"
+            android:textSize="15dp"
+            android:layout_marginTop="2dp"
+            android:backgroundTint="@android:color/white"
+            android:background="@color/black"/>
 
         <Button
             android:id="@+id/btn_Go"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#FF03DAC5"
-            android:text="Git"
-            map:backgroundTint="@color/teal_200" />
+            android:background="@color/black"
+            android:text="Go"
+            android:textColor="@color/white"
+            map:backgroundTint="@color/black" />
 
     </LinearLayout>
 
@@ -35,25 +44,30 @@
         android:id="@+id/btn_Sat"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:background="#FF03DAC5"
-        android:text="Uydu Görünümü"
-        map:backgroundTint="@color/teal_200" />
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/design"
+        android:text="Satellite View"
+        android:layout_marginLeft="5dp"
+        android:textAllCaps="false"
+        android:textColor="@color/white" />
 
-<fragment
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.hasibezafer.googlemapsapp.MapsActivity"
-    android:layout_below="@+id/lineer"/>
+    android:layout_marginTop="45dp"
+    tools:context=".MapsActivity" />
 
-<ZoomControls
-    android:layout_alignParentEnd="true"
-    android:layout_alignParentBottom="true"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/zoom"></ZoomControls>
+    <ZoomControls
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="230dp"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/zoom"></ZoomControls>
 
 </RelativeLayout>
